@@ -3,7 +3,6 @@ require File.dirname(__FILE__) + '/spec_helper'
 describe Command do
   before do
     @command = Command.new(:start, :port => 3000, :daemonize => true, :log => 'hi.log')
-    @command.silent = true
   end
   
   it 'should shellify command' do
