@@ -1,5 +1,9 @@
 == 0.7.0 Bionic Pickle release
- * Persistent connection (keep-alive) & HTTP pipelining support
+ * Wrap application in a Rack::CommonLogger adapter in debug mode.
+ * --debug (-D) option no longer set $DEBUG so logging will be less verbose
+   and Ruby won't be too strict, fixes #36.
+ * Deprecate Server#silent in favor of Logging.silent.
+ * Persistent connection (keep-alive) & HTTP pipelining support.
  * Fix -s option not being included in generated config file, fixes #37.
  * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script,
    closes #28 [Alex MacCaw]
